--- a/_data/data.yml
+++ b/_data/data.yml
@@ -134,7 +134,7 @@ projects:
 
     assignments:
       - title: Velocity
-        link: "#hook"
+        link: "sec.edu.au"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
       - title: DevStudio
