edited more info, nothing crazy

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,7 +3,7 @@
 #
 
 sidebar:
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
@@ -13,8 +13,8 @@ sidebar:
 
     # Sidebar links
     email: nina.e.rodgers@gmail.com
-    phone: 0422 782 704
-    website: blog.webjeda.com #do not add http://
+    phone: '+61 422 782 704'
+    website: #do not add http://
     linkedin: nina
     github: n33ny
     gitlab:
@@ -27,17 +27,14 @@ sidebar:
       - idiom: English
         level: Native
 
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
+      - idiom: Japanese
         level: Professional
         
     interests:
-      - item: Climbing
+      - item: Gardening
         link:
 
-      - item: Snowboarding
+      - item: Art making and appreciating
         link:
 
       - item: Cooking
@@ -54,22 +51,9 @@ actively identify ways in which to develop myself though challenges and formal t
 looking to extend my leadership and management skills.
 
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
-      details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-
-          - Bullet point
-          - Bullet point 
-
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
-      time: 2007 - 2011
+    - degree: BE (Mechanical) / BA (Japanese)
+      university: University of Sydney
+      time: 2006 - 2011
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -176,23 +160,11 @@ skills:
     title: Skills &amp; Proficiency
 
     toolset:
-      - name: Python & Django
+      - name: LOL
         level: 98%
 
-      - name: Javascript & jQuery
-        level: 98%
-
-      - name: Angular
-        level: 98%
-
-      - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
-        level: 85%
-
-      - name: Sketch & Photoshop
-        level: 60%
+      - name: Bullshitting
+        level: 2%
 
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
