--- a/_data/data.yml
+++ b/_data/data.yml
@@ -102,19 +102,93 @@ experiences:
             times a semester
           - Supported the Professor in supervising Masters, Honours and PhD students
 
-    - role: Senior Software Engineer
-      time: 2014 - 2015
-      company: Google, London
+    - role: Education Manager
+      time: 2016
+      company: [Training Agents](https://www.trainingagents.com.au/), Sydney
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
+          - Improved systems and procedures to increase efficiency and accuracy of administrative tasks
+            e.g. taking student enrolments and assessment submissions online and automating mail outs
+            and tasks via CRM set up
+          - Developed and implemented RTO quality management system and document control
+          - Scheduled and ran monthly training sessions for a team of 15 trainer/assessors to keep them
+            informed of legislative requirements, compliance regulations and to teach them newly
+            developed procedures
+          - Researched and understood Real Estate Agent requirements in NSW, VIC and ACT and brought
+            courses and accreditations in line with legislation
+          - Managed RTO compliance and data reporting
 
-          - Bullet point
-          - Bullet point
+    - role: Projects/Events
+      time: 2012 - 2017
+      company: [Hyundai Motor Company Australia](https://www.hyundai.com.au/), Sydney
+      details: |
+          - Created extensive documentation (Roadbooks) for Hyundai i30, Veloster, Tucson and Santa Fe
+            press release launches
+          - Responsible for complex projects- e.g. collected, analysed and presented [MoTeC](https://www.motec.com.au/home) Data to
+            Queensland Police Service to advise them of the pros and cons of different vehicles and tyres
+            when choosing the type and specs for their next highway patrol fleet car [resulting in an order of
+            over 200 vehicles](https://www.carsguide.com.au/car-news/queensland-police-snaps-up-hyundai-sonata-57685)
+          - Coordinated an all round rally experience for a group of Korean Journalists at Rally Australia
+            2014; arranged credentials and chauffeured between spectator points, helicopter rides and
+            received great feedback resulting in positive media reviews and articles
+          - Coordinated a large press launch event of the ‘All New Elantra’ in Tasmania
 
+    - role: Fleet Manager/Events
+      time: 2012 - 2017
+      company: [Hyundai Motor Company Australia](https://www.hyundai.com.au/), Sydney
+      details: |
+          - Managed bookings and prepared vehicles to a high standard on behalf of several car
+            manufacturers (over a dozen different makes and a fleet of over 150 vehicles), successfully
+            coordinating multiple clients and multiple suppliers in a high stakes, intensive environment with
+            tight deadlines
+          - Liaised with clients and journalists within a high quality customer service environment and went
+            above and beyond to ensure client satisfaction and to protect brand image
+          - Managed customer experiences and expectations during events- e.g. responsible for guest
+            transport solutions at a Mercedes Benz sponsored event
+          - Worked independently on initiative driven tasks- e.g. planned the drive route and managed
+            vehicle preparations and movements for the press launch of the ‘Bold New Honda Civic’ in
+            Albury and Jeep Grand Cherokee SRT in Sydney
+
+- role: Project Manager/Operations Administrator
+      time: 2015
+      company: Vocation (RTO), Brisbane
+      details: |  
+          - Independently implemented new systems to manage hospitality traineeships for over 500
+            students across QLD allowing the team to operate more efficiently. Documented and published
+            this solution to be put into practice by teams across the country
+          - Managed communication and relationships with multiple parties- frequently liaised with
+            trainers, students, clients and Government bodies
+          - Maintained Client and Student Management Systems
+          - Reviewed and uploaded Australian Vocational Education and Training Management Information
+            Statistical Standard (AVETMISS) data ensuring data integrity and correct funding payments
+          - Initiative- enhanced team operation- took responsibility for timely and accurate meeting minutes
+            to facilitate actions and follow up in response to observed problems, communicated and
+            archived in a timely and judicious manner which was widely appreciated by fellow team
+            members and contributed greatly to positive team and office culture.
+          - Implemented system to invite regional team and CEO to partake in online meetings,
+            announcements and training from within QLD main office further benefiting team cohesion and
+            functionality
+
+    - role: Project Manager
+      time: 2015
+      company: [MnSoft](http://global.hyundai-mnsoft.com/), Seoul
+      details: |       
+          - Designed and created testing procedures for GPS unit to be released in vehicles globally
+          - Tested devices in the field throughout Australia over three week period while reporting daily
+          - Wrote and compiled technical reports and presented findings to team at head office in Korea
+
+    - role: Office Manager
+      time: 2013 - 2015
+      company: [MnSoft](http://global.hyundai-mnsoft.com/), Seoul
+      details: | 
+          - As Driven Training was a small company, this all-round, full responsibility role included office
+            management, business development, accounts receivable, payroll and training material
+            development
+          - New CMS/LMS set up, training of staff and integration, data management and AVETMISS
+            (government) reporting
+          - Responsible for trainer preparation and mobilisation, travel and accommodation booking
+          - Created forms and documents compliant with Australian Skills Quality Authority (ASQA)
+            standards and prepared company for first audit to become an RTO
+          - Developed and applied policies/procedures, created and managed document control system      
     - role: UI Developer
       time: 2012 - 2014
       company: Amazon, London
