--- a/_data/data.yml
+++ b/_data/data.yml
@@ -103,7 +103,7 @@ experiences:
          - Supported the Professor in supervising Masters, Honours and PhD students
           
     - role: Education Manager
-      time: 2016
+      time: 2016 - 2016
       company: [Training Agents](https://www.trainingagents.com.au/), Sydney
       details: |
         - Improved systems and procedures to increase efficiency and accuracy of administrative tasks
