--- a/_data/data.yml
+++ b/_data/data.yml
@@ -59,7 +59,7 @@ education:
         ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
         pretium quis, sem.
 
-          - Bullet point
+          - Bullet point 1
           - Bullet point 
 
 experiences:
