--- a/_data/data.yml
+++ b/_data/data.yml
@@ -43,10 +43,12 @@ sidebar:
 career-profile:
     title: Summary
     summary: |
-      I am a versatile, effective, self-motivated and industrious individual with over five years of experience in successful Events/Project Management employment. I enjoy exploring new ideas, implementing new initiatives and then leading a project to a successful and sustained outcome. I am
-      a proactive and flexible team player with great attention to detail and strong interpersonal skills. I
-      actively identify ways in which to develop myself though challenges and formal training and am
-      looking to extend my leadership and management skills.
+      I am a versatile, self-motivated and industrious individual with over five years of experience 
+      n successful Events/Project Management employment. I have a passion exploring new ideas, 
+      implementing new initiatives and leading projects to successful and sustained outcomes. I am a 
+      proactive and flexible team player with great attention to detail and strong interpersonal 
+      skills. I am currently looking for a role where I can further hone my leadership and management 
+      ability.
 
 education:
     - degree: BE (Mechanical) / BA (Japanese)
@@ -56,7 +58,7 @@ education:
 experiences:
     - role: Project Manager and Executive Assistant
       time: 2016 - Present
-      company: The University of New South Wales, Sydney
+      company: <a href="https://www.unsw.edu.au/">The University of New South Wales</a>, Sydney
       details: |
         Managed two major projects as well as the role of Executive Assistant to a Professor
 
@@ -64,8 +66,8 @@ experiences:
          
          - Coordinated the delivery of 8 security subjects a year including staffing, setup, timetabling,
            exams and administration
-         - Worked closely with students and external stakeholders in running events such as ACCESS for
-           Women, Prime Minister and Cabinet (PM&C) Women in Cyber Mentoring Event, SecSoc
+         - Worked closely with students and external stakeholders in running events such as [ACCESS for
+           Women](https://www.engineering.unsw.edu.au/computer-science-engineering/courses-programs/school-programs/access-for-women), Prime Minister and Cabinet (PM&C) Women in Cyber Mentoring Event, [SecSoc](https://www.unswsecurity.com/)
            workshops and Capture the Flag (CTF) competitions
          - Hosted international security experts who delivered presentations and workshops for students
            and external stakeholders
@@ -75,9 +77,9 @@ experiences:
            and reporting for partnership
          - Worked closely with staff at UNSW and CBA to ensure delivery of partnership milestones
 
-        First Year Student Experience within the Office of the Deputy Vice-Chancellor (Academic)
+        [First Year Student Experience](http://loveuni.unsw.edu.au/) within the Office of the Deputy Vice-Chancellor (Academic)
           
-         - Production Manager for documentary/mini-series ‘My First Year’  including scheduling regular
+         - Production Manager for documentary/mini-series [‘My First Year’](http://loveuni.unsw.edu.au/my-first-year) including scheduling regular
            interviews and filming of seven students throughout 2017
          - Coordinated documentary red carpet premiere at UNSW including design, invitations, venue,
            catering, staffing and chaperoning VIP guests such as the Vice Chancellor and Deputy Vice
@@ -125,7 +127,7 @@ experiences:
 
     - role: Fleet Manager/Events
       time: 2016
-      company: Motorsport Safety and Rescue, Sydney
+      company: <a href="http://msrgroup.com.au/">Motorsport Safety and Rescue</a>, Sydney
       details: |
          - Managed bookings and prepared vehicles to a high standard on behalf of several car
            manufacturers (over a dozen different makes and a fleet of over 150 vehicles), successfully
@@ -161,7 +163,7 @@ experiences:
 
     - role: Project Manager
       time: 2015
-      company: MnSoft, Seoul
+      company: <a href="http://global.hyundai-mnsoft.com/">MnSoft</a>, Seoul
       details: |
         Designed and created testing procedures for GPS unit to be released in vehicles globally
         
@@ -170,7 +172,7 @@ experiences:
 
     - role: Office Manager
       time: 2013 - 2015
-      company: Driven Training, Yatala
+      company: <a href="http://www.driven.com.au/">Driven Training</a>, Yatala
       details: |
         As Driven Training was a small company, this all-round, full responsibility role included office
         management, business development, accounts receivable, payroll and training material
@@ -192,7 +194,7 @@ volunteer-roles:
       time: 2014 - 2016
       company: Robertson Scouts, Brisbane
 
-    - role: Pyjama Angel (helped a child in foster care with homework and reading)
+    - role: Pyjama Angel (helped a child in foster care with homework)
       time: 2015 - Present
       company: <a href="https://thepyjamafoundation.com/">The Pyjama Foundation</a>, Brisbane and Sydney
 
@@ -218,10 +220,38 @@ volunteer-roles:
 
     - role: Rally Headquarters Official (Translator and Administrator)
       time: 2006 - 2008
-      company: <http://www.rally-hokkaido.com/en/">Rally Hokkaido</a>, Obihiro, Japan
+      company: <a href="<http://www.rally-hokkaido.com/en/">Rally Hokkaido</a>, Obihiro, Japan
 
-
-
+extracurricular:
+    - role: NSW Justice of the Peace
+      time: Current
+      company: 218530
+    - role: Australian Mensa Member
+      time: Current
+      company: 7477
+    - role: NSW Working With Children clearance
+      time: Current
+      company: WWC1041202V
+    - role: Committee Member
+      time: 2010 - 2012
+      company: Stucco
+      details: |
+        Lead the Problems and Administration Committee whilst residing at Stucco , a
+        housing cooperative run by students of the University of Sydney. Coordinated a
+        re-writing of the By-Laws, moderated the e-list, supervised rent, organised
+        events and helped build and run an art gallery
+    - role: ECU Installation, Tuning and i2 Data Analysis Course
+      time: 2008
+      company: MoTeC
+    - role: Events Coordinator
+      time: 2007
+      company: Robot Wars
+    - role: Sponsorship Coordinator and Vice-President
+      time: 2009 - 2010
+      company: DotA Soc
+    - role: Events Coordinator
+      time: 2010
+      company: StuccoSoc
 
 skills:
     title: Skills &amp; Proficiency
