--- a/_data/data.yml
+++ b/_data/data.yml
@@ -44,7 +44,7 @@ career-profile:
     title: Summary
     summary: |
       I am a versatile, self-motivated and industrious individual with over five years of experience 
-      n successful Events/Project Management employment. I have a passion exploring new ideas, 
+      in successful Events/Project Management employment. I have a passion exploring new ideas, 
       implementing new initiatives and leading projects to successful and sustained outcomes. I am a 
       proactive and flexible team player with great attention to detail and strong interpersonal 
       skills. I am currently looking for a role where I can further hone my leadership and management 
@@ -60,40 +60,37 @@ experiences:
       time: 2016 - Present
       company: <a href="https://www.unsw.edu.au/">The University of New South Wales</a>, Sydney
       details: |
-        Managed two major projects as well as the role of Executive Assistant to a Professor
+        Concurrently managed two major projects as well as the role of Executive Assistant to a busy
+        Professor who was also the Director of both projects. Independently designed and executed 
+        events such as camps, workshops seminars and a documentary premiere for students and internal 
+        and external stakeholders. Was trusted to work autonomously and make major decisions 
+        on the running of projects in an exacting and high stakes environment.
 
-        [SECedu](https://sec.edu.au) partnership between UNSW and [CBA](https://www.commbank.com.au/) within the School of Computer Science and Engineering
+        [SECedu](https://sec.edu.au) partnership between UNSW and [CBA](https://www.commbank.com.au/) 
+        within the School of Computer Science and Engineering
          
-         - Coordinated the delivery of 8 security subjects a year including staffing, setup, timetabling,
-           exams and administration
-         - Worked closely with students and external stakeholders in running events such as [ACCESS for
-           Women](https://www.engineering.unsw.edu.au/computer-science-engineering/courses-programs/school-programs/access-for-women), Prime Minister and Cabinet (PM&C) Women in Cyber Mentoring Event, [SecSoc](https://www.unswsecurity.com/)
-           workshops and Capture the Flag (CTF) competitions
-         - Hosted international security experts who delivered presentations and workshops for students
-           and external stakeholders
+         - Coordinated the delivery of 8 security subjects a year including staffing, setup, 
+           timetabling, exams and administration
          - Managed the recruitment of four adjunct lecturers, a senior lecturer and over twenty student
            assistants; oversaw duties, delegated to projects and maintained a close working relationship
          - Managed budget of $1.5m spread over five years; purchases, staffing, security lab renovations
            and reporting for partnership
          - Worked closely with staff at UNSW and CBA to ensure delivery of partnership milestones
 
-        [First Year Student Experience](http://loveuni.unsw.edu.au/) within the Office of the Deputy Vice-Chancellor (Academic)
+        [First Year Student Experience](http://loveuni.unsw.edu.au/) within the Office of the 
+        Deputy Vice-Chancellor (Academic)
           
          - Production Manager for documentary/mini-series [‘My First Year’](http://loveuni.unsw.edu.au/my-first-year) including scheduling regular
            interviews and filming of seven students throughout 2017
-         - Coordinated documentary red carpet premiere at UNSW including design, invitations, venue,
-           catering, staffing and chaperoning VIP guests such as the Vice Chancellor and Deputy Vice
-           Chancellor (Academic)
          - Managed a budget of $450,000 in 2017 and $800,000 in 2018 including major purchases,
            reporting and staffing
 
         Executive Assistant to Professor Richard Buckland
           
-         - Conducted monthly credit card reconciliation and sorted over 200 email enquiries a week
-         - Managed busy schedule juggling teaching/research commitments and up to 20 meetings a week
-         - Arranged domestic and international travel to conferences and for speaking invitations multiple
-           times a semester
-         - Supported the Professor in supervising Masters, Honours and PhD students
+         - Managed all finances, sorted over 200 email enquiries a week and managed busy schedule juggling 
+           teaching/research commitments and up to 20 meetings a week. 
+         - Arranged the Professor's domestic and international travel to conferences and for speaking invitations 
+           multiple times a semester and supported him in supervising Masters, Honours and PhD students
          
     - role: Education Manager
       time: 2016
@@ -110,15 +107,16 @@ experiences:
            courses and accreditations in line with legislation
          - Managed RTO compliance and data reporting
 
-    - role: Projects/Events
+    - role: Projects/Events (Contractor)
       time: 2012 - 2017
       company: Hyundai Motor Company Australia, Sydney
       details: |
-         - Created extensive documentation (Roadbooks) for Hyundai i30, Veloster, Tucson and Santa Fe
+         - Created extensive documentation for Hyundai i30, Veloster, Tucson and Santa Fe
            press release launches
-         - Responsible for complex projects- e.g. collected, analysed and presented [MoTeC](https://www.motec.com.au/home) Data to
-           Queensland Police Service to advise them of the pros and cons of different vehicles and tyres
-           when choosing the type and specs for their next highway patrol fleet car [resulting in an order of
+         - Responsible for complex projects- e.g. collected, analysed and presented [MoTeC]
+           (https://www.motec.com.au/home) Data to Queensland Police Service to advise them 
+           of the pros and cons of different vehicles and tyres when choosing the type and 
+           specs for their next highway patrol fleet car [resulting in an order of
            over 200 vehicles](https://www.carsguide.com.au/car-news/queensland-police-snaps-up-hyundai-sonata-57685)
          - Coordinated an all round rally experience for a group of Korean Journalists at Rally Australia
            2014; arranged credentials and chauffeured between spectator points, helicopter rides and
@@ -129,10 +127,11 @@ experiences:
       time: 2016
       company: <a href="http://msrgroup.com.au/">Motorsport Safety and Rescue</a>, Sydney
       details: |
-         - Managed bookings and prepared vehicles to a high standard on behalf of several car
-           manufacturers (over a dozen different makes and a fleet of over 150 vehicles), successfully
-           coordinating multiple clients and multiple suppliers in a high stakes, intensive environment with
-           tight deadlines
+        Managed bookings and prepared vehicles to a high standard on behalf of several car
+        manufacturers (over a dozen different makes and a fleet of over 150 vehicles), successfully
+        coordinating multiple clients and multiple suppliers in a high stakes, intensive environment with
+        tight deadlines
+
          - Liaised with clients and journalists within a high quality customer service environment and went
            above and beyond to ensure client satisfaction and to protect brand image
          - Managed customer experiences and expectations during events- e.g. responsible for guest
@@ -141,24 +140,17 @@ experiences:
            vehicle preparations and movements for the press launch of the ‘Bold New Honda Civic’ in
            Albury and Jeep Grand Cherokee SRT in Sydney
           
-    - role: Project Manager/Operations Administrator
+    - role: Operations Administrator to Project Manager
       time: 2015
       company: Vocation (RTO), Brisbane
       details: |
-         - Independently implemented new systems to manage hospitality traineeships for over 500
-           students across QLD allowing the team to operate more efficiently. Documented and published
+         - Independently implemented new systems to manage traineeships for over 500
+           students across QLD allowing the team to operate more effectively. Documented and published
            this solution to be put into practice by teams across the country
-         - Managed communication and relationships with multiple parties- frequently liaised with
-           trainers, students, clients and Government bodies
-         - Maintained Client and Student Management Systems
          - Reviewed and uploaded Australian Vocational Education and Training Management Information
            Statistical Standard (AVETMISS) data ensuring data integrity and correct funding payments
-         - Initiative- enhanced team operation- took responsibility for timely and accurate meeting minutes
-           to facilitate actions and follow up in response to observed problems, communicated and
-           archived in a timely and judicious manner which was widely appreciated by fellow team
-           members and contributed greatly to positive team and office culture.
          - Implemented system to invite regional team and CEO to partake in online meetings,
-           announcements and training from within QLD main office further benefiting team cohesion and
+           announcements and training from within QLD main office benefiting team cohesion and
            functionality
 
     - role: Project Manager
@@ -167,19 +159,21 @@ experiences:
       details: |
         Designed and created testing procedures for GPS unit to be released in vehicles globally
         
-         - Tested devices in the field throughout Australia over three week period while reporting daily
-         - Wrote and compiled technical reports and presented findings to team at head office in Korea
+         - Tested devices in the field throughout Australia over three week period while reporting 
+           daily
+         - Wrote and compiled technical reports and presented findings to team at head office in 
+           Korea
 
-    - role: Office Manager
+    - role: Administration to Office Manager
       time: 2013 - 2015
       company: <a href="http://www.driven.com.au/">Driven Training</a>, Yatala
       details: |
-        As Driven Training was a small company, this all-round, full responsibility role included office
-        management, business development, accounts receivable, payroll and training material
-        development
+        As Driven Training was a small company, this all-round, full responsibility role included 
+        office management, business development, accounts receivable, payroll and training material
+        development.
 
-         - New CMS/LMS set up, training of staff and integration, data management and AVETMISS
-           (government) reporting
+         - New CMS/LMS set up, training of staff and integration, data management and 
+           government reporting
          - Responsible for trainer preparation and mobilisation, travel and accommodation booking
          - Created forms and documents compliant with Australian Skills Quality Authority (ASQA)
            standards and prepared company for first audit to become an RTO
@@ -262,6 +256,3 @@ skills:
 
       - name: Bullshitting
         level: 2%
-
-footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
